# PythonWEBTask10

./: pyproject.toml
django_project/: db.sqlite3
django_project/django_project/: asgi.py  settings.py  urls.py  wsgi.py
django_project/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
django_project/quotes/migrations/: 0001_initial.py  0002_alter_author_born_location_alter_author_fullname_and_more.py
django_project/quotes/static/quotes/: style.css
django_project/quotes/templates/quotes/: about_author.html  add_author.html  add_quote.html  base.html  index.html  show_quotes.html  tag.html
django_project/quotes/templatetags/: extract_tags.py
django_project/users/: forms.py  urls.py  views.py
django_project/users/templates/registration/: password_reset_complete.html  signup.html
django_project/users/templates/users/: login.html  password_reset_confirm.html  password_reset_done.html
django_project/utils/: add_quotes_to_mongo.py  migration.py  quotes.json
