[tool.poetry]
name = "django_project"
version = "0.1.0"
description = ""
authors = ["Aryna Reutska <arina.reutskaya110@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
pymongo = "^4.6.2"
bson = "^0.5.10"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
